--- a/_config.yml
+++ b/_config.yml
@@ -78,7 +78,7 @@ theme: Butterfly
 
 # Deployment
 ## Docs: https://hexo.io/docs/deployment.html
-deploy:
-  type: git
-  repository: git@github.com:Hydrogen5/Hydrogen5.github.io.git
-  branch: master
+# deploy:
+#   type: git
+#   repository: https://github.com/Hydrogen5/Hydrogen5.github.io.git
+#   branch: master
