--- a/.github/workflows/pages.yml
+++ b/.github/workflows/pages.yml
@@ -25,6 +25,8 @@ jobs:
         run: npm install
       - name: Build
         run: npm run build
+      - name: Gen imgs
+        run: cp -r ./img/ public/img/
       - name: Deploy
         uses: peaceiris/actions-gh-pages@v3
         with:
